# token-validator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: architecture_summary_example.py  auth0_token_validation_example.py  user_token_validation_example.py
src/jwt_lib/authenticator/: auth0_authenticator.py  authenticator.py  user_authenticator.py
src/jwt_lib/claims/: __init__.py  access_token_claims.py  trusted_claims.py
src/jwt_lib/config/: __init__.py  config.py
src/jwt_lib/exceptions/: __init__.py  errors.py
src/jwt_lib/profiles/: __init__.py  auth0_profile.py  token_profile.py  user_profile.py
src/jwt_lib/validation/: __init__.py  engine.py  rules.py
src/jwt_lib/verifier/: __init__.py  auth0_verifier.py  base_verifier.py  timeout_jwk_client.py  user_verifier.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth0_authenticator.py  test_auth0_authenticator_additional.py  test_user_authenticator.py  test_user_authenticator_additional.py
tests/unit/authenticator/: test_authenticator.py
tests/unit/claims/: test_access_token.py  test_base.py
tests/unit/exceptions/: __init__.py  test_errors.py
tests/unit/profiles/: test_profiles.py
tests/unit/validation/: test_engine.py  test_rules.py
tests/unit/verifier/: test_auth0_verifier.py  test_signing_key_cache.py  test_timeout_jwk_client.py  test_timeout_jwk_client_additional.py  test_user_verifier.py  test_verifier.py
